Adding files on 24th October

--- a/CSS/style_index.css
+++ b/CSS/style_index.css
@@ -128,6 +128,9 @@ header a{
 .principal_name{
 	font-size: 120%;
 }
+.message_paragraph{
+	text-align: left;
+}
 /*********************************************** footer_part ****************************************************/
 .footer-whole{
 	padding-left: 35%;
@@ -145,7 +148,7 @@ header a{
 .footer-lower-part{
 	background-color: rgb(179, 19, 7);
 }
-/*************************************************************** Why-Mt-Manaslu ************************************************************/
+/*************************************************************** Why-Mt-Manaslu*********************************************************/
 
 /*************************************************************** Responsive Part ************************************************************/
 
